--- a/index.html
+++ b/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <main class="main-content">
+      <h1 class="main-title">Rock Paper Scissors</h1>
+      <p class="score">
+        Score: <span class="user-score">0</span> -
+        <span class="computer-score">0</span>
+      </p>
+      <h2>Choose Your Weapon</h2>
+      <div class="selections">
+        <div class="selection">
+          <span class="emoji">👊🏼</span>
+          <p>Rock</p>
+        </div>
+        <div class="selection">
+          <span class="emoji">✋🏼</span>
+          <p>Paper</p>
+        </div>
+        <div class="selection">
+          <span class="emoji">✌🏼</span>
+          <p>Scissors</p>
+        </div>
+      </div>
+    </main>
+  </body>
 
   <script src="./script.js"></script>
 </html>
