added colors to main title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   </head>
   <body>
     <main class="main-content">
-      <h1 class="main-title">Rock Paper Scissors</h1>
+      <h1 class="main-title">
+        <span class="red">Rock</span> <span class="blue">Paper</span>
+        <span class="green">Scissors</span>
+      </h1>
       <p class="score">
         Score: <span class="user-score">0</span> -
         <span class="computer-score">0</span>
