moved score and added hidden computer choice text

--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="main-content">
+    <header class="header-container">
       <h1 class="main-title">
         <span class="red">Rock</span> <span class="blue">Paper</span>
         <span class="green">Scissors</span>
       </h1>
       <p class="score">
-        Score: <span class="user-score">0</span> -
-        <span class="computer-score">0</span>
+        Score: <span class="user-score red">0</span> -
+        <span class="computer-score red">0</span>
       </p>
+    </header>
+    <main class="main-content">
+      <p class="comp-choice">computer chose: <span class="choice"></span></p>
       <h2>Choose Your Weapon</h2>
       <div class="selections">
         <div class="selection">
